--- a/Exercícios/ex026/fundo05.html
+++ b/Exercícios/ex026/fundo05.html
@@ -4,19 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personalição dos Fundos</title>
-
+    <title>Posicionamento</title>
     <style>
-
         body{
-            background-image: url(imagens/imagens-cap19/wallpaper001.jpg);
-            background-size: 100px 100px;
-            background-repeat: repeat;
+            background-image: url(imagens/imagens-cap19/wallpaper003.jpg);
+            background-position: center center;
+            height: 97vh;
         }
-
     </style>
 </head>
 <body>
-
+    
 </body>
 </html>
