--- a/Exercícios/ex026/fundo06.html
+++ b/Exercícios/ex026/fundo06.html
@@ -11,7 +11,7 @@
             background-color: black;
             background-image: url(imagens/imagens-cap19/wallpaper002.jpg);
             background-position: center center;
-            background-repeat: repeat-y;
+            background-repeat: repeat-x;
             background-size: cover;
             background-attachment: fixed;
         }
