--- a/Exercícios/ex026/fundo07.html
+++ b/Exercícios/ex026/fundo07.html
@@ -12,6 +12,7 @@
             background-image: url(imagens/imagens-cap19/wallpaper002.jpg);
             background-position: center center;
             background-size: cover;
+            background-attachment: fixed;
         }
 
         main{
