--- a/Exercícios/ex026/fundo07.html
+++ b/Exercícios/ex026/fundo07.html
@@ -8,20 +8,17 @@
     <style>
         body{
             height: 100vh;
-            background-color: black;
-            background-image: url(imagens/imagens-cap19/wallpaper002.jpg);
-            background-position: center center;
+            background: black url(imagens/imagens-cap19/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
-            background-attachment: fixed;
         }
 
         main{
-            background-color: white;
             width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
             border-radius: 15px;
+            background-color: white;
         }
     </style>
 </head>
